@@ -78,7 +78,7 @@ public class FormulaActionHandlerOperations {
             return new Double(((Number) o1).doubleValue() + ((Number) o2).doubleValue());
         }
         if (Long.class.isInstance(o1) && Long.class.isInstance(o2)) {
-            return new Long((long) (((Long) o1).doubleValue() + ((Long) o2).doubleValue()));
+            return Long.valueOf((long) (((Long) o1).doubleValue() + ((Long) o2).doubleValue()));
         }
         if (Date.class.isInstance(o1) && Number.class.isInstance(o2)) {
             return new Date(((Date) o1).getTime() + (long) (((Number) o2).doubleValue() * 60 * 1000));
@@ -107,13 +107,13 @@ public class FormulaActionHandlerOperations {
             return new Double(((Number) o1).doubleValue() - ((Number) o2).doubleValue());
         }
         if (Long.class.isInstance(o1) && Long.class.isInstance(o2)) {
-            return new Long((long) (((Number) o1).doubleValue() - ((Number) o2).doubleValue()));
+            return Long.valueOf((long) (((Number) o1).doubleValue() - ((Number) o2).doubleValue()));
         }
         if (Date.class.isInstance(o1) && Number.class.isInstance(o2)) {
             return new Date(((Date) o1).getTime() - (long) (((Number) o2).doubleValue() * 60 * 1000));
         }
         if (Date.class.isInstance(o1) && Date.class.isInstance(o2)) {
-            return new Long((((Date) o1).getTime() - ((Date) o2).getTime()) / 60000);
+            return Long.valueOf((((Date) o1).getTime() - ((Date) o2).getTime()) / 60000);
         }
         log.error("Cannot make substraction for " + o1.getClass() + " with " + o2.getClass());
         return null;
@@ -127,7 +127,7 @@ public class FormulaActionHandlerOperations {
             return new Double(((Number) o1).doubleValue() * ((Number) o2).doubleValue());
         }
         if (Long.class.isInstance(o1) && Long.class.isInstance(o2)) {
-            return new Long((long) (((Number) o1).doubleValue() * ((Number) o2).doubleValue()));
+            return Long.valueOf((long) (((Number) o1).doubleValue() * ((Number) o2).doubleValue()));
         }
         log.error("Cannot make multiplication for " + (o1 != null ? o1.getClass() : "null") + " with " + (o2 != null ? o2.getClass() : "null"));
         return null;
@@ -138,7 +138,7 @@ public class FormulaActionHandlerOperations {
             return new Double(((Double) o1).doubleValue() / ((Number) o2).doubleValue());
         }
         if (Long.class.isInstance(o1) && Number.class.isInstance(o2)) {
-            return new Long((long) (((Long) o1).doubleValue() / ((Number) o2).doubleValue()));
+            return Long.valueOf((long) (((Long) o1).doubleValue() / ((Number) o2).doubleValue()));
         }
         log.error("Cannot make division for " + o1.getClass() + " with " + o2.getClass());
         return null;
@@ -149,7 +149,7 @@ public class FormulaActionHandlerOperations {
             return new Double(-((Double) o).doubleValue());
         }
         if (Long.class.isInstance(o)) {
-            return new Long(-((Long) o).longValue());
+            return Long.valueOf(-((Long) o).longValue());
         }
         log.error("Cannot make changeSign for " + o.getClass());
         return null;
@@ -157,7 +157,7 @@ public class FormulaActionHandlerOperations {
 
     public Object not(Object o) {
         if (Boolean.class.isInstance(o)) {
-            return new Boolean(!((Boolean) o).booleanValue());
+            return !(Boolean)o;
         }
         log.error("Cannot make not for " + o.getClass());
         return null;
@@ -165,22 +165,22 @@ public class FormulaActionHandlerOperations {
 
     public Object less(Object o1, Object o2) {
         if (Double.class.isInstance(o1) && Double.class.isInstance(o2)) {
-            return new Boolean(((Double) o1).doubleValue() < ((Double) o2).doubleValue());
+            return Boolean.valueOf(((Double) o1).doubleValue() < ((Double) o2).doubleValue());
         }
         if (Double.class.isInstance(o1) && Long.class.isInstance(o2)) {
-            return new Boolean(((Double) o1).doubleValue() < ((Long) o2).doubleValue());
+            return Boolean.valueOf(((Double) o1).doubleValue() < ((Long) o2).doubleValue());
         }
         if (Long.class.isInstance(o1) && Double.class.isInstance(o2)) {
-            return new Boolean(((Long) o1).doubleValue() < ((Double) o2).doubleValue());
+            return Boolean.valueOf(((Long) o1).doubleValue() < ((Double) o2).doubleValue());
         }
         if (Long.class.isInstance(o1) && Long.class.isInstance(o2)) {
-            return new Boolean(((Long) o1).longValue() < ((Long) o2).longValue());
+            return Boolean.valueOf(((Long) o1).longValue() < ((Long) o2).longValue());
         }
         if (String.class.isInstance(o1) && String.class.isInstance(o2)) {
-            return new Boolean(((String) o1).compareTo((String) o2) < 0);
+            return Boolean.valueOf(((String) o1).compareTo((String) o2) < 0);
         }
         if (Date.class.isInstance(o1) && Date.class.isInstance(o2)) {
-            return new Boolean(((Date) o1).compareTo((Date) o2) < 0);
+            return Boolean.valueOf(((Date) o1).compareTo((Date) o2) < 0);
         }
         log.error("Cannot make less for " + o1.getClass() + " with " + o2.getClass());
         return null;
@@ -191,7 +191,7 @@ public class FormulaActionHandlerOperations {
     }
 
     public Object equal(Object o1, Object o2) {
-        return new Boolean(o1.equals(o2));
+        return o1.equals(o2);
     }
 
     public Object lessOrEqual(Object o1, Object o2) {
@@ -208,7 +208,7 @@ public class FormulaActionHandlerOperations {
 
     public Object or(Object o1, Object o2) {
         if (Boolean.class.isInstance(o1) && Boolean.class.isInstance(o2)) {
-            return new Boolean(((Boolean) o1).booleanValue() || ((Boolean) o2).booleanValue());
+            return (Boolean) o1 || (Boolean) o2;
         }
         log.error("Cannot make or for " + o1.getClass() + " with " + o2.getClass());
         return null;
@@ -216,7 +216,7 @@ public class FormulaActionHandlerOperations {
 
     public Object and(Object o1, Object o2) {
         if (Boolean.class.isInstance(o1) && Boolean.class.isInstance(o2)) {
-            return new Boolean(((Boolean) o1).booleanValue() && ((Boolean) o2).booleanValue());
+            return (Boolean) o1 && (Boolean) o2;
         }
         log.error("Cannot make and for " + o1.getClass() + " with " + o2.getClass());
         return null;
@@ -224,7 +224,7 @@ public class FormulaActionHandlerOperations {
 
     public Object xor(Object o1, Object o2) {
         if (Boolean.class.isInstance(o1) && Boolean.class.isInstance(o2)) {
-            return new Boolean(((Boolean) o1).booleanValue() ^ ((Boolean) o2).booleanValue());
+            return (Boolean) o1 ^ (Boolean) o2;
         }
         log.error("Cannot make xor for " + o1.getClass() + " with " + o2.getClass());
         return null;
@@ -286,7 +286,7 @@ public class FormulaActionHandlerOperations {
         if (hours * 60 < minutes) {
             hours++;
         }
-        return new Long(hours * 60);
+        return Long.valueOf(hours * 60);
     }
 
     public Long roundUpFunction(double d) {
@@ -419,12 +419,8 @@ public class FormulaActionHandlerOperations {
                                     zd = 9;
                                 }
                             }
-                        } else {
-                            boolean b3 = "ой ый".indexOf(suf2) >= 0 && wordType > 4 && !word.substring(len - 4, len).equals("опой") || zb > 10
-                                    && za > 16;
-                            if (b3) {
-                                zd = 8;
-                            }
+                        } else if (zb > 10 && za > 16) {
+                            zd = 8;
                         }
                     }
                 }
@@ -531,33 +527,33 @@ public class FormulaActionHandlerOperations {
         String name = st.hasMoreElements() ? st.nextToken() : "";
         String parent = st.hasMoreElements() ? st.nextToken() : "";
 
-        String answer = "";
+        StringBuilder answer = new StringBuilder();
         for (char c : mode.toCharArray()) {
             switch (c) {
             case 'F':
-                answer += wordCaseRussian(family, caseNumber, sex, 1, false);
+                answer.append(wordCaseRussian(family, caseNumber, sex, 1, false));
                 break;
             case 'I':
-                answer += wordCaseRussian(name, caseNumber, sex, 2, false);
+                answer.append(wordCaseRussian(name, caseNumber, sex, 2, false));
                 break;
             case 'O':
-                answer += wordCaseRussian(parent, caseNumber, sex, 3, false);
+                answer.append(wordCaseRussian(parent, caseNumber, sex, 3, false));
                 break;
             case 'f':
-                answer += wordCaseRussian(family, caseNumber, sex, 1, true);
+                answer.append(wordCaseRussian(family, caseNumber, sex, 1, true));
                 break;
             case 'i':
-                answer += wordCaseRussian(name, caseNumber, sex, 2, true);
+                answer.append(wordCaseRussian(name, caseNumber, sex, 2, true));
                 break;
             case 'o':
-                answer += wordCaseRussian(parent, caseNumber, sex, 3, true);
+                answer.append(wordCaseRussian(parent, caseNumber, sex, 3, true));
                 break;
             default:
-                answer += c;
+                answer.append(c);
             }
         }
 
-        return answer;
+        return answer.toString();
     }
 
 }
